Removed audit, removed finalize split functionality, added class diagram
